Update EXPO_PUBLIC_API_URL in .env file and implement login functionality in Login screen

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-EXPO_PUBLIC_API_URL=https://e51c-2804-14d-ac85-4f4d-653f-162d-7033-19e9.ngrok-free.app
+EXPO_PUBLIC_API_URL=https://22a2-201-63-78-210.ngrok-free.app
