Update EXPO_PUBLIC_API_URL in .env file and implement login functionality in Login screen

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-EXPO_PUBLIC_API_URL=https://22a2-201-63-78-210.ngrok-free.app
+EXPO_PUBLIC_API_URL=https://f2d2-2804-14d-ac85-4f4d-7d79-4750-60b5-f01a.ngrok-free.app
