--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.3",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.19",
     "@react-navigation/drawer": "^6.6.14",
     "@react-navigation/native": "^6.1.16",
@@ -24,6 +25,7 @@
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-storage": "^1.0.1",
     "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
