--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-EXPO_PUBLIC_API_URL=https://3485-2804-14d-ac85-4f4d-2c52-e4e8-9844-e0a3.ngrok-free.app
+EXPO_PUBLIC_API_URL=http://26.104.112.185:4000
