--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-storage": "^1.0.1",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "react-phone-number-input": "^3.4.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
