--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/drawer": "^6.6.14",
     "@react-navigation/native": "^6.1.16",
     "@react-navigation/native-stack": "^6.9.25",
+    "@react-navigation/stack": "^6.4.1",
     "axios": "^1.6.8",
     "expo": "^50.0.0",
     "expo-font": "~11.10.3",
