--- a/package.json
+++ b/package.json
@@ -10,30 +10,29 @@
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.3",
-    "@expo/metro-runtime": "~3.1.3",
-    "@react-native-async-storage/async-storage": "1.21.0",
+    "@expo/metro-runtime": "~3.2.3",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.19",
     "@react-navigation/drawer": "^6.6.14",
     "@react-navigation/native": "^6.1.16",
     "@react-navigation/native-stack": "^6.9.25",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.6.8",
-    "expo": "^50.0.0",
-    "expo-font": "~11.10.3",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.38",
+    "expo-font": "~12.0.10",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.4",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-phone-number-input": "^2.1.0",
+    "react-native": "0.74.5",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-international-phone-number": "^0.8.0",
     "react-native-picker-select": "^9.3.1",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
     "react-native-storage": "^1.0.1",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-web": "~0.19.6",
-    "react-phone-number-input": "^3.4.5"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
