--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-storage": "^1.0.1",
+    "react-native-svg": "^15.9.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6"
   },
