fix: update app name to 'Newpack' in app.json

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "newpack",
+    "name": "Newpack",
     "slug": "newpack",
     "version": "1.1.0",
     "orientation": "portrait",
