--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.3",
-    "@expo/metro-runtime": "^4.0.0",
+    "@expo/metro-runtime": "~4.0.1",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/bottom-tabs": "^6.5.19",
@@ -19,18 +19,18 @@
     "@react-navigation/native-stack": "^6.9.25",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.6.8",
-    "expo": "^52.0.18",
-    "expo-font": "^13.0.1",
-    "expo-status-bar": "^2.0.0",
+    "expo": "~52.0.36",
+    "expo-font": "~13.0.4",
+    "expo-status-bar": "~2.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-native": "^0.76.5",
+    "react-native": "^0.76.7",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-international-phone-number": "^0.8.0",
     "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-screens": "~4.4.0",
     "react-native-storage": "^1.0.1",
     "react-native-svg": "^15.8.0",
     "react-native-vector-icons": "^10.0.3",
