--- a/app.json
+++ b/app.json
@@ -2,10 +2,11 @@
   "expo": {
     "name": "NewPack",
     "slug": "newpack",
-    "version": "1.1.2",
+    "version": "1.2.0",
     "orientation": "portrait",
     "newArchEnabled": true,
     "icon": "./assets/icon.png",
+    "schema": "newpack",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
