--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "newpack",
-  "version": "1.1.2",
+  "version": "1.2.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -21,6 +21,7 @@
     "axios": "^1.6.8",
     "expo": "~52.0.36",
     "expo-font": "~13.0.4",
+    "expo-linking": "^7.0.5",
     "expo-status-bar": "~2.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -34,7 +35,8 @@
     "react-native-storage": "^1.0.1",
     "react-native-svg": "^15.8.0",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-web": "^0.19.13"
+    "react-native-web": "^0.19.13",
+    "expo-clipboard": "~7.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
