--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.6.8",
     "expo": "~52.0.36",
+    "expo-clipboard": "~7.0.1",
     "expo-font": "~13.0.4",
     "expo-linking": "^7.0.5",
     "expo-status-bar": "~2.0.1",
@@ -35,8 +36,10 @@
     "react-native-storage": "^1.0.1",
     "react-native-svg": "^15.8.0",
     "react-native-vector-icons": "^10.0.3",
+    "react-native-view-shot": "~4.0.3",
     "react-native-web": "^0.19.13",
-    "expo-clipboard": "~7.0.1"
+    "expo-media-library": "~17.0.6",
+    "expo-sharing": "~13.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
