feat: update PopUp component to use loadingStoreData from AuthContext and remove DevSettings reload; add android to .gitignore and update eas.json for environment variables

--- a/eas.json
+++ b/eas.json
@@ -12,6 +12,9 @@
       "distribution": "internal",
       "android": {
         "buildType": "apk"
+      },
+      "env": {
+        "EXPO_PUBLIC_API_URL": "http://ec2-3-146-152-124.us-east-2.compute.amazonaws.com"
       }
     },
     "production": {
